# rust-append-only-log

./: Cargo.toml  README.md
src/: lib.rs  log.rs  main.rs  server.rs
