[package]
name = "rust-log"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0"
